{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 125,
  "lineage": "c4ad7d39-3e32-ba7d-a98b-528e30302aed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "milal-public-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe1a26398339253f",
            "association_id": "eipassoc-0899eb57f51119a2a",
            "domain": "vpc",
            "id": "eipalloc-0fe1a26398339253f",
            "instance": "i-082c7319e89583b4a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02251084582ddbe9c",
            "private_dns": "ip-10-0-0-45.ec2.internal",
            "private_ip": "10.0.0.45",
            "public_dns": "ec2-34-203-113-234.compute-1.amazonaws.com",
            "public_ip": "34.203.113.234",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.milal_cluster",
            "aws_key_pair.ec2key",
            "aws_security_group.milal-ingress",
            "aws_subnet.subnet-1-public",
            "aws_vpc.milal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "milal_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:714085512629:instance/i-082c7319e89583b4a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082c7319e89583b4a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02251084582ddbe9c",
            "private_dns": "ip-10-0-0-45.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.45",
            "public_dns": "ec2-34-203-113-234.compute-1.amazonaws.com",
            "public_ip": "34.203.113.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "milal_cluster"
                },
                "throughput": 0,
                "volume_id": "vol-0147caac919e86d98",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050e99f27986f698b",
            "tags": {
              "Name": "milal_cluster"
            },
            "tags_all": {
              "Name": "milal_cluster"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b0d4b767d64b57d"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2key",
            "aws_security_group.milal-ingress",
            "aws_subnet.subnet-1-public",
            "aws_vpc.milal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "milal-internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714085512629:internet-gateway/igw-016b7ee536d2bfb90",
            "id": "igw-016b7ee536d2bfb90",
            "owner_id": "714085512629",
            "tags": {
              "Name": "milal-internet-gw"
            },
            "tags_all": {
              "Name": "milal-internet-gw"
            },
            "vpc_id": "vpc-0a46ac7574062d897"
          },
          "dependencies": [
            "aws_vpc.milal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-milal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714085512629:route-table/rtb-0cee176f499bbfc87",
            "id": "rtb-0cee176f499bbfc87",
            "owner_id": "714085512629",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-016b7ee536d2bfb90",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-milal"
            },
            "tags_all": {
              "Name": "route-table-milal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a46ac7574062d897"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.milal-internet-gw",
            "aws_vpc.milal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fd9644c50885b95",
            "route_table_id": "rtb-0cee176f499bbfc87",
            "subnet_id": "subnet-050e99f27986f698b"
          },
          "dependencies": [
            "aws_internet_gateway.milal-internet-gw",
            "aws_route_table.route-table-milal",
            "aws_subnet.subnet-1-public",
            "aws_vpc.milal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "milal-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714085512629:security-group/sg-01b0d4b767d64b57d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b0d4b767d64b57d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 37283,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 37283
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "714085512629",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a46ac7574062d897"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.milal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714085512629:subnet/subnet-050e99f27986f698b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050e99f27986f698b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "714085512629",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a46ac7574062d897"
          },
          "dependencies": [
            "aws_vpc.milal-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "milal-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:714085512629:vpc/vpc-0a46ac7574062d897",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0330b5be966be1772",
            "default_route_table_id": "rtb-07b07eecde395f28e",
            "default_security_group_id": "sg-01cf13660c779563c",
            "dhcp_options_id": "dopt-0d260a7dbead5da19",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a46ac7574062d897",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b07eecde395f28e",
            "owner_id": "714085512629",
            "tags": {
              "Name": "milal-vpc"
            },
            "tags_all": {
              "Name": "milal-vpc"
            }
          }
        }
      ]
    }
  ]
}